# folding-astar

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md  correctness.md
folding_astar/: __init__.py  astar.py  examples.py  folding.py  jps.py  movingai.py  search.py  stats.py  types.py  warehouse.py
tests/: test_edge_cases.py  test_jps.py  test_movingai.py  test_random_differential.py  test_search.py  test_stats.py  test_warehouse.py
