[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folding-astar"
version = "0.1.0"
description = "Folding A*: optimal grid pathfinding via horizontal-reflection symmetry, with a verified-correct implementation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Amr Elshahed" },
    { name = "Farah Aini Binti Abdullah" },
    { name = "Majid Khan Bin Majahar Ali" },
]
keywords = ["pathfinding", "a-star", "grid", "symmetry", "quotient-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Amr-path/folding-astar"
Issues = "https://github.com/Amr-path/folding-astar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["folding_astar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"
